--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="usermessage_noemail">No ingreso un correo.</string>
     <string name="usermessage_noemailformat">No ingreso un correo valido.</string>
     <string name="usermessage_nopassword">No ingreso Contraseña.</string>
+
+    String urlString
+
 </resources>
